Project

General

Profile

Bug #38116

rgw: GetBucketAcl on non-existing bucket doesn't throw NoSuchBucket

Added by Matt Benjamin about 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This reproduces on our downstream Luminous baseline, appears logically implicated on master (not verified).

Run GetBucketAcl on a bucket name that doesn't exist

Steps to Reproduce:
1. call GetBucketAcl with a non-existing bucket name
2. evaluate the result

e.g.:

s3_staging_resource = boto3.resource(
's3',
aws_access_key_id=staging_ceph_access_key,
aws_secret_access_key=staging_ceph_secret_key,
endpoint_url=staging_ceph_endpoint_url
)

bucket_acl = s3_staging_resource.BucketAcl('anonexistingbucket')
print(bucket_acl.grants)

Actual results:
[{u'Grantee': {u'Type': 'CanonicalUser', u'DisplayName': 'M. Tester', u'ID': 'testid'}, u'Permission': 'FULL_CONTROL'}]

Expected results:
An error occurred (NoSuchBucket) when calling the GetBucketAcl operation: Unknown


Related issues

Copied to rgw - Backport #38353: mimic: rgw: GetBucketAcl on non-existing bucket doesn't throw NoSuchBucket Resolved
Copied to rgw - Backport #38354: luminous: rgw: GetBucketAcl on non-existing bucket doesn't throw NoSuchBucket Resolved

History

#2 Updated by Matt Benjamin about 5 years ago

  • Status changed from Fix Under Review to 17

#3 Updated by Matt Benjamin about 5 years ago

  • Status changed from 17 to Pending Backport

#4 Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38353: mimic: rgw: GetBucketAcl on non-existing bucket doesn't throw NoSuchBucket added

#5 Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38354: luminous: rgw: GetBucketAcl on non-existing bucket doesn't throw NoSuchBucket added

#6 Updated by Nathan Cutler almost 5 years ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF